# zorin-metacity-theme

./: README.md  meson.build  meson_options.txt
src/: meson.build
src/ZorinBlue-Light/metacity-1/: metacity-theme-1.xml
